wp-content/themes/gowatch-child/style.css
/* ... */
input[type="range"]::-moz-range-thumb {
  width: 14px;
  height: 14px;
  background: rgba(55,105,150,1);
  cursor: pointer;
  border-radius: 50%;
}

.single-content {
    margin-top: -30px;
}
.single .post-meta .entry-meta-author .post-author-avatar img {
    width: 38px;
}
.single .post-meta .entry-meta-author>.entry-meta-date,
.single .post-meta .entry-meta-author>a[rel="author"] {
    font-size: 11px;
}

.asset-metadata .asset-metadata-inner {
    padding: 18px;
    background: #f9f9f9;
    font-size: 14px;
    margin-bottom: 20px;
}
.asset-metadata h4 {
    font-size: 15px;
    text-transform: uppercase;
    margin: 0 0 15px 0;
    font-weight: 600;
    opacity: 0.7;
}
.asset-metadata .metadata-item {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 20px;
    font-weight: 600;
}
.asset-metadata .metadata-item:last-child {
    margin-bottom: 0;
}
.asset-metadata .metadata-item strong {
    flex-basis: 100%;
    margin-bottom: 5px;
    font-weight: normal;
    text-transform: uppercase;
    font-size: 12px;
    color: #999;
}
.asset-metadata .metadata-item b {
    flex: 0 0 100%;
    font-weight: normal;
}
.asset-metadata .metadata-item b:last-of-type {
    margin-top: 10px;
}

.ts-single-video {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.ts-single-video .asset-main-info {
    flex: 0 0 calc(100% - 220px);
    padding-right: 30px;
}
.ts-single-video .asset-metadata {
    flex: 0 0 220px;
}
.ts-single-video .post-footer {
    flex-basis: 100%;
}

@media screen and (max-width: 768px) {
    .ts-single-video .asset-main-info {
        flex: 0 0 100%;
        padding-right: 0;
    }
    .ts-single-video .asset-metadata {
        flex: 0 0 100%;
    }
}

/* Start of part for custom posts in Dashboard */

.onsen-table {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
}
.onsen-table .onsen-tr {
    border: 1px solid #f8f8f8;
}
.onsen-table .onsen-tr,
.onsen-table .onsen-thead {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
}

.onsen-table .onsen-thead .onsen-th {
    background: #000;
    color: #FFF;
    font-size: 16px;
    text-transform: uppercase;
    color: #ccc;
}
.onsen-table .onsen-thead .onsen-th,
.onsen-table .onsen-tr .onsen-td {
    flex: 0 0 20%;
    padding: 8px 12px;
    align-items: center;
}
.onsen-table .onsen-tr:nth-of-type(odd) {
    background: #f8f8f8;
}
.onsen-table .onsen-thead .onsen-th:first-child,
.onsen-table .onsen-tr .onsen-td:first-child {
    flex: 0 0 60%;
}
.onsen-table .onsen-tr .onsen-td {
    align-items: center;
    display: inline-flex;
}
.list-view {
    width: 100%;
}
.listed-article {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}
.listed-article figure {
    flex: 0 0 40%;
    margin-right: 30px;
    width: 40%;
    margin-bottom: 0;
}
.listed-article header {
    flex: 0 0 calc(60% - 30px);
}
.listed-article figure.has-background-img {
    padding-bottom: 25%;
}
.list-view article.listed-article header h2.entry-title {
    font-size: 22px;
    line-height: 1.3;
}
.onsen-button {
    display: inline-block;
    height: 28px;
    line-height: 28px;
    font-size: 12px;
    text-transform: uppercase;
    border: 1px solid #7E8A95;
    color: #7E8A95;
    margin-right: 15px;
    padding: 0 14px;
    border-radius: 15px;
}
.onsen-button.delete-video {
    border: 1px solid #E95757;
    color: #E95757;
}
article.listed-article .image-holder a.post-format-link {
    top: 50%;
    left: 50%;
    width: 42px;
    height: 42px;
    transform: translate(-50%, -50%);
}
article.listed-article .image-holder a.post-format-link > span {
    line-height: 34px;
}
.do-pagination {
    display: block;
    border-radius: 5px;
    border: 2px solid #121212;
    width: 300px;
    max-width: 100%;
    margin: 30px auto;
    text-align: center;
    padding: 12px 10px;
    cursor: pointer;
    font-weight: bold;
}
.do-pagination:hover {
    border-color: #ccc;
}

article .entry-meta {
    text-align:  left;
}

article .entry-meta-date a::after{
    content: '\2F';
    display: inline-block;
    vertical-align: middle;
    margin-left: 10px;
}
/* END of part for custom posts in Dashboard */
#cesiumContainer {
    height: calc(100vh - 71px);
}
.admin-bar #cesiumContainer {
    height: calc(100vh - 103px);
}
#toolbar {
    background: rgba(0, 0, 0, 0);
    margin: 0;
    position: absolute;
    padding: 0;
    border-radius: 0;
    top: 5px;
    left: 5px;
}

.btn-download {
    display: block;
    padding: 0 15px;
    border-radius: 20px;
    text-align: center;
    height: 40px;
    border: 1px solid #e5e8ee;
    text-transform: uppercase;
    line-height: 38px;
    font-size: 12px;
}

#scroll-down-btn {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    /*right: 76px;*/
    height: 29px;
    line-height: 29px;
    padding: 0 28px 0 34px;
    background: #fff;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    color: #fff;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 0.02em;
    background: rgba(55,105,150,1);
    cursor: pointer;
}
#scroll-down-btn:hover {
    background: rgba(142,108,136,1);
}
.cesium-credit-logoContainer img {
    min-width: 0 !important;
}

.cesium-viewer-measureContainer {
    display: none !important;
}
.cesium-viewer .cesium-widget-credits {
    float: left;
}



/**
    The code used for the sidebar
*/

.video-figure-content {
    padding-right: 45px;
    position: relative;
}

#side-menu-bar-wrapper {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
}

.bst4-wrapper #navbar-right {
    right: 0;
    top: 0;
    bottom: 0;
    position: absolute;
    padding: 0 !important;
}

.bst4-wrapper #navbar-right .nav,
.bst4-wrapper #navbar-right .nav-item {
    margin: 0 !important;
    text-align: center;
}

/*
navbar buttons
*/

.bst4-wrapper #navbar-right {
    width: 45px;
}
/* ... */

